--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,242 +1,339 @@
+
 body{
     margin: 0;
     font-family: 'Merriweather', sans-serif;
-}
-
-.my-nav{
-    background-color: #E4F9F5;
-}
-.my-nav ul li a{
-    color: #11999E;
-}
-.nav-link {
-    font-size: 20px;
-    color: #11999E;
-}
-
-.hero-section{
-    background-color: #E4F9F5;
-    text-align: center;
-    position: absolute;
-    width: 100%;
-}
-
-.top-cloud{
-    position: relative;
-    top: 25px;
-    left: 400px;
-}
-
-.bottom-cloud{
-    position: relative;
-    top: -100px;
-    left: 10px;
-}
-
-.my-img{
-    width: 15%;
-    border-radius: 60%;
-    border: 6px solid #11999E;
-}
-
-.my-img:hover{
-    width: 17%;
-    border-radius: 60%;
-    border: 8px solid #11999E;
+    background-color: #F6F6C9;
 }
 
 h1{
-    margin: 0;
     font-family: 'Sacramento', cursive;
-    font-size: 562.5%;
-    color: #11999E;
+    font-size: 350%;
 }
 
-h2{
-    font-family: 'Montserrat', sans-serif;
-    color: #11999E;
+
+.hero-section{
+    background-color: #153462;
+    margin-bottom: 100px;
+    padding-bottom: 50px;
+    color: #F6F6C9;
 }
 
-h4{
-    font-family: 'Montserrat', sans-serif;
-    color: #40514E;
-}
-
-hr{
-    background-color: #11999E;
-    width: 60%;
-    height: 1px;
-}
-
-.describe hr:first-child{
-    margin-top: 850px;
-}
-
-.describe .about-me{
+.header-container{
     margin: auto;
-    width: 80%;
-    text-align: center;
-    font-family: 'Montserrat', sans-serif;
-    color: #40514E;
+    width: 95%;
+    display: flex;
+	align-items: center;
+    justify-content: space-between;
+}
+
+.my-nav{
+    display: inline-block;
+    margin-top: 10px;
+}
+
+.my-nav ul{
+    display: inline-block;
+    display: flex;
+}
+
+.my-nav ul li{
+    list-style: none;
+    display: inline-block;
+    padding-left: 50px;
+}
+
+.my-nav ul li a{
+    text-decoration: none;
+    color: #F6F6C9;
     font-size: 20px;
 }
 
-.describe .about-me em{
-    font-family: serif;
-    font-size: 50px;
-    color: #30E3CA;
+.my-nav ul li a:hover{
+    color: #BAD1C2;
 }
 
-.timeline h2{
+.my-nav i{
+    font-size: 40px;
+    display: none;
+}
+
+.mob-nav{
+    background-color: #F6F6C9;
+    color: #153462;
+    text-align: end;
+    display: none;
+}
+
+.mob-nav ul li{
+    list-style: none;
+    padding: 5px 0;
+    padding-right: 50px;
+}
+
+.mob-nav ul li a{
+    text-decoration: none;
+    color: #153462;
+    font-size: 18px;
+}
+
+.mob-nav ul li a:hover{
+    color: #BAD1C2;
+}
+
+.my-img{
+    width: 25%;
+    border-radius: 50%;
+    float: left;
+    border: 4px solid #F6F6C9;
+}
+
+.my-img:hover{
+    width: 27%;
+}
+
+.title{
     margin: auto;
+    margin-top: 100px;
+    margin-bottom: 150px;
+    width: 50%;
+}
+
+.title-text{
+    padding-top: 1px;
+    padding-left: 280px;
+}
+
+.title-text h1{
+    margin-bottom: 20px;
+}
+
+.hero-section hr{
+    width: 60%;
+}
+
+.hero-section hr:last-child{
     margin-top: 80px;
-    width:fit-content;
 }
 
+.about-me table{
+    margin: auto;
+    width: 80%;
+}
 
-.timeline {
-    margin:auto;
-    width: 100%;
-    font-family: 'Montserrat', sans-serif;
-    color: #11999E;
-    background-color: #E4F9F5;
+.desc-col{
+    padding-top: 10%;
+    font-size: 18px;
+    line-height: 2;
+}
+
+.em-col{
+    padding-top: 0;
+}
+
+.about-me em{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 90px;
+    color: #F05454;
+}
+
+.timeline{
     text-align: center;
-    font-size: 16px;
+    font-size: 25px;
+    color: #153462;
 }
 
-.timeline-flow table{
-    margin: 50px auto;
-    width: 70%;
+.timeline-hr{
+    width: 20%;
+    background-color: #153462;
+    height: 2px;
 }
 
 .main-table{
+    margin: auto;
+    margin-top: 100px;
+    width: 80%;
+    font-family: 'Montserrat', sans-serif;
     border-collapse: collapse;
 }
 
-.timeline-flow table .main-title{
-    border-right: 4px solid #40514E;
-    border-top: 4px solid #40514E;
-    border-bottom: 4px solid #40514E;
-}
-
-.for-line{
-    width: 80px;
-    text-align: center;
-}
-
-.timeline-desc{
-    border-left: 4px solid #40514E;
-    border-top: 4px solid #40514E;
-    border-bottom: 4px solid #40514E;
-    text-align: justify;
-    width: 100%;
-}
-
 .date-line{
-    width: 100px;
-    text-align: center;
-    font-family: 'Montserrat', sans-serif;
-    color: #40514E;
-}
-
-
-
-.contact-form{
-    margin: auto;
-    width: 60%;
-    background-color: #40514E;
-    border-radius: 10px;
-    opacity: 0.8;
-    text-align: center;
-    padding: 50px;
-}
-
-.contact-form input{
-    width: 60%;
-    margin: 10px;
-    padding: 20px;
-    border-color: #11999E;
-}
-
-.contact-form input:focus{
-    width: 62%;
-}
-
-.contact-form textarea{
-    width: 60%;
-    margin: 10px;
-    padding: 20px;
-    border-color: #11999E;
-}
-
-.contact-form textarea:focus{
-    width: 62%;
-}
-
-footer{
-    margin-top: 50px;
-    background-color: #40514E;
-    width: 100%;
-    text-align: center;
-    padding-top: 20px;
-    padding-bottom: 5px;
-}
-
-footer h4{
-    color: white;
-    font-family: 'Montserrat', sans-serif;
-}
-
-footer p{
-    color: white;
-    font-family: 'Montserrat', sans-serif;
-}
-
-footer a{
-    padding: 40px;
-}
-
-footer a img{
-    width: 2%;
-    height: 2%;
-    padding-bottom: 20px;
+    font-size: 15px;
+    padding: 0 20px;
+    color: #4FA095;
+    background-color: #BAD1C2;
+    border-top: 4px solid #153462;
+    border-bottom: 4px solid #153462;
+    border-left: 4px solid #153462;
 }
 
 .progress-icon{
-    color: #30E3CA;
-    padding-right: 16px;
-    font-size: 24px;
+    font-size: 35px;
+    color: #F6F6C9;
+    background-color: #153462;
+    border-right: 4px solid #153462;
+    border-top: 4px solid #153462;
+    
+}
+
+.blank-cell{
+    background-color: #153462;
+    border-bottom: 4px solid #153462;
+}
+
+.main-title{
+    padding-left: 20px;
+    font-size: 20px;
+    color: #4FA095;
+    border-top: 4px solid #153462;
+    border-right: 4px solid #153462;
+    border-bottom: 4px solid #153462;
+}
+
+.main-title h2{
+    color: #153462;
+}
+
+.timeline-desc{
+    padding-left: 20px;
+    font-size: 18px;
+    line-height: 1.5;
+    background-color: #BAD1C2;
+    color: #153462;
+    border-top: 4px solid #153462;
+    border-left: 4px solid #153462;
+    border-bottom: 4px solid #153462;
 }
 
 
-@media (max-width: 960px){
-    .bottom-cloud{
-        position: relative;
-        top: 50px;
-        left: 50px;
+.contact-me{
+    margin: 100px auto;
+    padding: 30px 0;
+    padding-bottom: 20px;
+    
+    background-color: #153462;
+    opacity: 0.9;
+    text-align: center;
+}
+
+.contact-me h3{
+    margin-bottom: 30px;
+    font-size: 30px;
+    color: #F6F6C9;
+}
+.contact-me input{
+    margin: 10px auto;
+    display: block;
+    width: 60%;
+    height: 40px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    background-color: #F6F6C9;
+    opacity: 1;
+}
+
+.contact-me textarea{
+    margin: 30px auto;
+    display: block;
+    width: 60%;
+    height: 80px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    background-color: #F6F6C9;
+    opacity: 1;
+}
+
+.contact-me input:last-of-type{
+    background-color: #F6F6C9;
+    color: #153462;
+    width: 25%;
+    height: 60px;
+    border: none;
+    font-size: 18px;
+    opacity: 1;
+}
+
+.contact-me input:last-of-type:hover{
+    background-color: #153462;
+    color: #F6F6C9;
+    border: 2px solid #F6F6C9;
+}
+
+.contact-me a{
+    color: black;
+}
+
+footer{
+    padding-top: 10px;
+    background-color: #153462;
+    text-align: center;
+    color: #F6F6C9;
+}
+
+footer a i{
+    color: #F6F6C9;
+    font-size: 30px;
+    padding: 10px 50px;
+}
+
+footer a i:hover{
+    font-size: 32px;
+    box-shadow: 1px 1px #BAD1C2;
+}
+
+footer p{
+    padding-bottom: 10px;
+    margin-bottom: 0;
+}
+
+@media(max-width: 1384px){
+    .title{
+        width: 60%;
+    }
+}
+
+@media(max-width: 1153px){
+    .title{
+        width: 70%;
+    }
+}
+
+@media(max-width: 988px){
+    .title{
+        width: 80%;
+        text-align: center;
+        margin-bottom: 70px;
     }
 
-    .contact-form input{
-        width: 96%;
+    .my-img{
+        width: 30%;
+        border-radius: 50%;
+        float: none;
+        border: 4px solid #F6F6C9;
     }
 
-    .contact-form input:focus{
-        width: 98%;
-    }
-
-    .contact-form textarea{
-        width: 96%;
+    .title-text{
+        padding-top: 0;
+        padding-left: 0;
     }
     
-    .contact-form textarea:focus{
-        width: 98%;
+    .title-text h1{
+        margin-bottom: 10px;
     }
 
-  
+    .my-nav ul{
+        display: none;
+    }
 
-    footer a img{
-        width: 10%;
-        height: 10%;
-        padding-bottom: 20px;
+    .my-nav i{
+        display: block;
+        padding: 20px 20px 0 0;
+    }
+
+    .mob-nav{
+        display: none;
+    }
+
+    .mob-nav ul li a{
+       font-size: 25px;
     }
 }
