--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,8 +1,11 @@
-
 body{
     margin: 0;
     font-family: 'Merriweather', sans-serif;
     background-color: #F6F6C9;
+    background-image: url("../backg1.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 h1{
@@ -12,7 +15,7 @@ h1{
 
 
 .hero-section{
-    background-color: #153462;
+    /*background-color: #153462;*/
     margin-bottom: 100px;
     padding-bottom: 50px;
     color: #F6F6C9;
@@ -162,7 +165,7 @@ h1{
     font-size: 15px;
     padding: 0 20px;
     color: #4FA095;
-    background-color: #BAD1C2;
+    background-color: #F6F6C9;
     border-top: 4px solid #153462;
     border-bottom: 4px solid #153462;
     border-left: 4px solid #153462;
@@ -199,7 +202,7 @@ h1{
     padding-left: 20px;
     font-size: 18px;
     line-height: 1.5;
-    background-color: #BAD1C2;
+    background-color: #F6F6C9;
     color: #153462;
     border-top: 4px solid #153462;
     border-left: 4px solid #153462;
@@ -207,14 +210,16 @@ h1{
 }
 
 
+
 .contact-me{
     margin: 100px auto;
     padding: 30px 0;
     padding-bottom: 20px;
-    
-    background-color: #153462;
-    opacity: 0.9;
+    width: 60%;
+    border-radius: 10px;
     text-align: center;
+    background-color: rgba(30, 39, 39, 0.5);
+    box-shadow: 10px 10px 10px 10px rgba(30, 39, 39);
 }
 
 .contact-me h3{
@@ -223,41 +228,63 @@ h1{
     color: #F6F6C9;
 }
 .contact-me input{
+    color: #F6F6C9;
     margin: 10px auto;
     display: block;
     width: 60%;
     height: 40px;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
-    background-color: #F6F6C9;
-    opacity: 1;
+    background-color: transparent;
+    border: none;
+    border-bottom: 2px solid #F6F6C9;
+}
+
+input:focus{
+    outline: none;
+    border-bottom: 3px solid #F05454;
 }
 
 .contact-me textarea{
+    color: #F6F6C9;
     margin: 30px auto;
     display: block;
     width: 60%;
     height: 80px;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
-    background-color: #F6F6C9;
-    opacity: 1;
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid #F6F6C9;
+}
+
+input::placeholder, textarea::placeholder{
+    background-color: transparent;
+    color: #F6F6C9;
+}
+
+textarea:focus{
+    outline: none;
+    border-bottom: 3px solid #F05454;
 }
 
 .contact-me input:last-of-type{
-    background-color: #F6F6C9;
-    color: #153462;
+    background-color: transparent;
+    color: #F6F6C9;
+    border: 1px solid rgba(30, 39, 39);
+    box-shadow: 3px 3px 3px 3px rgba(30, 39, 39);
+    border-radius: 10px;
     width: 25%;
     height: 60px;
-    border: none;
     font-size: 18px;
     opacity: 1;
 }
 
 .contact-me input:last-of-type:hover{
-    background-color: #153462;
-    color: #F6F6C9;
-    border: 2px solid #F6F6C9;
+    background-color: #F6F6C9;
+    color: #153462;
+    border: 1px solid #F6F6C9;
+    box-shadow: none;
 }
 
 .contact-me a{
